Ticket #28568: Added visibility model to GroupCellControl.

--- a/com.top_logic/src/main/java/com/top_logic/layout/form/boxes/reactive_tag/FORM_GROUP_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/form/boxes/reactive_tag/FORM_GROUP_TEMPLATE.template.html
@@ -1,29 +1,36 @@
-<div id="{id}"
-	class="is-control {canInspectClass} rf_groupCell {collapsed ? 'collapsed'} {cssClass} {wholeLine ? 'rf_line'} {rows > 1 ? 'rf_spanRow' + rows} {!hasBorder ? 'noBorder'} {!hasLegend ? 'noLegend'}"
-	style="{width ? 'width: ' + width + '; '}{style}"
-	draggable="{draggable}"
-	data-id="{dataId}"
->
-	<tl:if test="hasLegend || collapsible || hasMenu">
-		<div class="rf_header"
-			onclick="{onclick}"
-			ondblclick="{ondblclick}"
-		>
-			<tl:if test="hasLegend">
-				{title}
-			</tl:if>
-			<tl:if test="hasMenu">
-				<span class="rf_menu">{menuButton}</span>
-			</tl:if>
-			<tl:if test="collapsible">
-				<span class="frmGroupExpand">{toggleButton}</span>
-			</tl:if>
-		</div>
-	</tl:if>
-
-	<tl:if test="!collapsed">
-		<div class="rf_content rf_dropTarget {columns > 0 ? 'cols' + columns}">
-			{content}
-		</div>
-	</tl:if>
-</div>
+<tl:if test="visible">
+	<div id="{id}"
+		class="is-control {canInspectClass} rf_groupCell {collapsed ? 'collapsed'} {cssClass} {wholeLine ? 'rf_line'} {rows > 1 ? 'rf_spanRow' + rows} {!hasBorder ? 'noBorder'} {!hasLegend ? 'noLegend'}"
+		style="{width ? 'width: ' + width + '; '}{style}"
+		draggable="{draggable}"
+		data-id="{dataId}"
+	>
+		<tl:if test="hasLegend || collapsible || hasMenu">
+			<div class="rf_header"
+				onclick="{onclick}"
+				ondblclick="{ondblclick}"
+			>
+				<tl:if test="hasLegend">
+					{title}
+				</tl:if>
+				<tl:if test="hasMenu">
+					<span class="rf_menu">{menuButton}</span>
+				</tl:if>
+				<tl:if test="collapsible">
+					<span class="frmGroupExpand">{toggleButton}</span>
+				</tl:if>
+			</div>
+		</tl:if>
+	
+		<tl:if test="!collapsed">
+			<div class="rf_content rf_dropTarget {columns > 0 ? 'cols' + columns}">
+				{content}
+			</div>
+		</tl:if>
+	</div>
+</tl:if>
+<tl:if test="!visible">
+	<div id="{id}"
+		class="rf_invisible">
+	</div>
+</tl:if>
