Ticket #25918: Added diagram node for receiving click events.

--- a/com.top_logic.graphic.blocks.server/src/main/webapp/style/tl-blocks.css
+++ b/com.top_logic.graphic.blocks.server/src/main/webapp/style/tl-blocks.css
@@ -35,3 +35,8 @@ path.tlbConnector {
 .tlSelected .tlSelectionMarker {
 	display: initial;
 }
+
+.tlClickTarget {
+	cursor: pointer;
+	stroke: var(--link-primary);
+}
