Ticket #28688: Refactoring: Show remove icon always with tl-danger.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -2900,4 +2900,5 @@ i.tl-accent-3,
 i.tl-accent-2 {
 	--highlight-fg: var(--highlight);
 	color: var(--highlight, inherit);
+	text-shadow: var(--icon-outline);
 }
