--- a/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
@@ -599,6 +599,7 @@ span.urlWithIcon .input-image.disabled i, span.cIconSelect .input-image.cannot-e
 span.dlgToolbar .input-image.disabled i, span.pdlgToolbar .input-image.disabled i,
 div.cCollapsibleToolbar .input-image.disabled i, .tl-table__title-toolbar .input-image.disabled i {
 	color: var(--icon-disabled);
+	text-shadow: none;
 }
 
 /* Icon Button Styles */
@@ -657,11 +658,6 @@ a.fChoose:hover,
 
 .cButton.fToggle a:hover {
 	color: var(--highlight-fg, var(--button-fg, var(--icon-primary)));
-}
-
-.cButton.dfRemove a {
-	text-shadow: var(--icon-outline);
-	color: var(--support-danger) !important;
 }
 
 .sblLogo,
