Ticket #28688: Ability to add additional commands to the group title.

--- a/com.top_logic/src/main/java/com/top_logic/layout/form/boxes/reactive_tag/FORM_GROUP_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/form/boxes/reactive_tag/FORM_GROUP_TEMPLATE.template.html
@@ -12,8 +12,8 @@
 			<tl:if test="hasLegend">
 				{title}
 			</tl:if>
-			<tl:if test="hasMenu">
-				<span class="rf_menu">{menuButton}</span>
+			<tl:if test="hasCommands">
+				<span class="rf_menu">{commands}</span>
 			</tl:if>
 			<tl:if test="collapsible">
 				<span class="frmGroupExpand">{toggleButton}</span>
