Ticket #28737: create css class for new style

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -1242,6 +1242,10 @@ div.dfListAdd {
   }
 }
 
+.rf_gridMinmax {
+    grid-template-columns: minmax(0, 1fr);
+}
+
 /*
 ****					****
 ****	Input styles	****
