Ticket #28711: adapt css to make table look complete

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -2249,6 +2249,10 @@ h5.card-title > a:hover {
 	text-decoration: none;
 }
 
+.treeBody.collapsed-borders {
+    border-collapse: collapse !important;
+}
+
 .tcrNode .treeNode {
     display: flex;
     align-items: center;
