--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -1071,6 +1071,7 @@ table td .cIntegerInput input,
 table td .cExpandableTextInput input, 
 table td .cBlockTextInput input, 
 table td .cPopupSelect input,
+table td .cTextPopup,
 table td .cDatetime .cDateInput input,
 table td .cDatetime .cTimeInput input,
 table td .cDateInput input,
