Ticket #28647: Adjusted CSS to the reverted part.

--- a/com.top_logic.chart.chartjs/src/main/webapp/style/tl-chartjs.css
+++ b/com.top_logic.chart.chartjs/src/main/webapp/style/tl-chartjs.css
@@ -1,6 +1,6 @@
 
 /* Expand the ChartJS control of a ChartJS component to 100% of its available space. */
 div.cjsComp {
-	flex-grow: 1;
-	min-height: 0;
+	width: 100%;
+	height: 100%;
 }
