--- a/com.top_logic/src/main/webapp/WEB-INF/layouts/masterFrame.layout.xml
+++ b/com.top_logic/src/main/webapp/WEB-INF/layouts/masterFrame.layout.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
-<include name="templates/masterFrame.xml"
-	closeDialogOnBackgroundClick="true"
+<config:template-call
+	xmlns:config="http://www.top-logic.com/ns/config/6.0"
+	final="false"
+	template="com.top_logic/masterFrame.template.xml"
 >
-	<components>
-		<layout-reference resource="masterContent.layout.xml"/>
-	</components>
-</include>
+	<arguments closeDialogOnBackgroundClick="true">
+		<components>
+			<layout-reference resource="masterContent.layout.xml"/>
+		</components>
+	</arguments>
+</config:template-call>
