Ticket #28604: Allow to customize master frame property closeDialogOnBackgroundClick with theme variable.

--- a/com.top_logic/src/main/webapp/WEB-INF/layouts/masterFrame.layout.xml
+++ b/com.top_logic/src/main/webapp/WEB-INF/layouts/masterFrame.layout.xml
@@ -5,7 +5,7 @@
 	final="false"
 	template="com.top_logic/masterFrame.template.xml"
 >
-	<arguments closeDialogOnBackgroundClick="true">
+	<arguments closeDialogOnBackgroundClick="%closeDialogOnBackgroundClick%">
 		<components>
 			<layout-reference resource="masterContent.layout.xml"/>
 		</components>
