Ticket #28604: Moved dialog to "GlobalDialogs.xml".
It is currently not possible to add global dialogs to
masterFrame.layout.overlay.xml, because then they are not editable
in-app. The current way to go is to add them to the (non-modular)
GlobalDialogs.xml

--- a/com.top_logic.model.search/src/main/webapp/WEB-INF/layouts/GlobalDialogs.xml
+++ b/com.top_logic.model.search/src/main/webapp/WEB-INF/layouts/GlobalDialogs.xml
@@ -3,4 +3,5 @@
 <template>
 	<layout-reference resource="export/exportDialog.layout.xml"/>
 	<layout-reference resource="export/gridExportDialog.layout.xml"/>
+	<layout-reference resource="admin/myLatestChanges/dialog.layout.xml"/>
 </template>
