--- a/com.top_logic.layout.formeditor/src/main/webapp/WEB-INF/layouts/GlobalDialogs.xml
+++ b/com.top_logic.layout.formeditor/src/main/webapp/WEB-INF/layouts/GlobalDialogs.xml
@@ -3,6 +3,7 @@
 <template>
 	<layout-reference resource="export/exportDialog.layout.xml"/>
 	<layout-reference resource="export/gridExportDialog.layout.xml"/>
+	<layout-reference resource="admin/myLatestChanges/dialog.layout.xml"/>
 	<layout-reference resource="admin/security/accounts/userSettings/dialog.layout.xml"/>
 	<layout-reference resource="admin/security/accounts/defaultFor/dialog.layout.xml"/>
 </template>
