Ticket #25918: Added zoomdisplay for current zoom level.

--- a/com.top_logic.graphic.blocks.server/src/main/webapp/style/tl-blocks.css
+++ b/com.top_logic.graphic.blocks.server/src/main/webapp/style/tl-blocks.css
@@ -44,3 +44,17 @@ path.tlbConnector {
 .tlDiagram {
 	transform-origin: top left;
 }
+
+.tlDiagram > svg {
+	cursor: default;
+}
+
+.zoomDisplay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 8px;
+	background-color: #3338;
+	border-bottom-left-radius: 8px;
+	color: white;
+}
