--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -2507,14 +2507,10 @@ td.tl-table__cell .cDataItem li {
 /* ======   ImageUploadControl    ===== */
 /* ==================================== */
 
-.cImgUpload {
-	width: fit-content;
-	height: fit-content;
-}
-
 .cImgUpload img {
-	max-width: 20rem;
-	max-height: 14rem;
+	max-width: stretch;
+	max-width: -moz-available;
+	max-width: -webkit-fill-available;
 }
 
 .cImgUpload .fClear {
@@ -2547,21 +2543,33 @@ td.tl-table__cell .cDataItem li {
 }
 
 .cImgUpload input[type="file"] {
-	display: none;
+	opacity: 0;
+	position: absolute;
 }
 
 .cImgUpload label {
 	display: inline-flex;
-	width: 20rem;
-	height: 14rem;
 	cursor: pointer;
+	
+	width: stretch;
+	width: -moz-available;
+	width: -webkit-fill-available;
+	min-width: 14rem;
+	min-height: 14rem;
+	
+	padding: 0;
 	white-space: nowrap;
 	align-items: center;
 	justify-content: center;
+	
 	background: var(--field);
 	color: var(--text-primary);
 	border-radius: var(--spacing-03);
 	border: dashed var(--border-subtle) 4px;
+}
+
+.cImgUpload label > * {
+	pointer-events: none;
 }
 
 .cImgUpload label .cmdImg {
@@ -2578,7 +2586,7 @@ td.tl-table__cell .cDataItem li {
 	border-color: var(--border-strong);
 }
 
-.cImgUpload label:focus:not(.cmdButtonDisabled) {
+.cImgUpload input[type="file"]:focus + label:not(.cmdButtonDisabled) {
 	border-color: var(--focus);
 }
 
