--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -2507,16 +2507,21 @@ td.tl-table__cell .cDataItem li {
 /* ======   ImageUploadControl    ===== */
 /* ==================================== */
 
-.cImgUpload img:not(.annotatedMaxW) {
-	max-width: stretch;
-	max-width: -moz-available;
-	max-width: -webkit-fill-available;
+.cImgUpload input {
+	margin-left: 2px;
 }
 
-.cImgUpload img.annotatedMaxW {
-	width: stretch;
-	width: -moz-available;
-	width: -webkit-fill-available;
+.cImgUpload input.first {
+	margin-left: 0px;
+}
+
+.cImgUpload input {
+	background-color: var(--background);
+}
+
+.cImgUpload input[type="file"] {
+	opacity: 0;
+	position: absolute;
 }
 
 .cImgUpload .fClear {
@@ -2536,21 +2541,16 @@ td.tl-table__cell .cDataItem li {
 	text-decoration: none;
 }
 
-.cImgUpload input {
-	margin-left: 2px;
+.cImgUpload img:not(.annotatedMaxW) {
+	max-width: stretch;
+	max-width: -moz-available;
+	max-width: -webkit-fill-available;
 }
 
-.cImgUpload input.first {
-	margin-left: 0px;
-}
-
-.cImgUpload input {
-	background-color: var(--background);
-}
-
-.cImgUpload input[type="file"] {
-	opacity: 0;
-	position: absolute;
+.cImgUpload img.annotatedMaxW {
+	width: stretch;
+	width: -moz-available;
+	width: -webkit-fill-available;
 }
 
 .cImgUpload label {
@@ -2560,17 +2560,16 @@ td.tl-table__cell .cDataItem li {
 	width: stretch;
 	width: -moz-available;
 	width: -webkit-fill-available;
-	min-width: 14rem;
-	min-height: 14rem;
+	height: 14rem;
 	
 	padding: 0;
+	overflow: hidden;
 	white-space: nowrap;
 	align-items: center;
 	justify-content: center;
 	
 	background: var(--field);
 	color: var(--text-primary);
-	border-radius: var(--spacing-03);
 	border: dashed var(--border-subtle) 4px;
 }
 
@@ -2580,6 +2579,11 @@ td.tl-table__cell .cDataItem li {
 
 .cImgUpload label .cmdImg {
 	padding-right: var(--spacing-02);
+}
+
+.cImgUpload label .cmdLabel {
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .cImgUpload.dragHover label {
