Ticket #28150: Added tooltips to options if not defined.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -2059,6 +2059,10 @@ input[type="checkbox"]:checked.tl-treeSelect__someChildren::after {
 	row-gap: var(--spacing-02);
 }
 
+.cChoice {
+	width: 100%;
+}
+
 .tl-table__cell-container :is(.cBooleanChoice,.cChoice) {
     flex-wrap: nowrap;
 }
@@ -2087,6 +2091,8 @@ span.bcc-option {
 .cChoice-option {
     align-items: center;
     text-wrap: nowrap;
+	display: inline-flex;
+	max-width: 100%;
 }
 
 .cChoice-option label {
@@ -2094,6 +2100,8 @@ span.bcc-option {
 	cursor: pointer;
 	margin-left: var(--spacing-02);
 	padding: 0; /* Remove the space between the label and a potential option separator */
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .cChoice-horizontal.disabled label,
@@ -2886,9 +2894,6 @@ img.ddwttItemIcon {
 	overflow: visible;
 }
 
-.ddwttTag:has(.ddwttItemLabel:hover) {
-	overflow: visible;
-}
 
 .ddwttTagX {
 	width: .875rem;
