Ticket #28931: Updated security in TL-Demo.

--- a/com.top_logic.demo/src/main/webapp/WEB-INF/layouts/GlobalDialogs.xml
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/layouts/GlobalDialogs.xml
@@ -24,6 +24,7 @@
 				defaultFor="DemoTypes:DemoTypes.A,DemoTypes:DemoTypes.B,DemoTypes:DemoTypes.C.All,DemoTypes:DemoTypes.L"
 				master=""
 				namePrefix="globalDialog"
+				securityObject="model"
 				structure="DemoTypes"
 			/>
 		</components>
