Ticket #28931: Added demo for delegated security.

--- a/com.top_logic/src/main/webapp/WEB-INF/layouts/templates/contentTab.xml
+++ b/com.top_logic/src/main/webapp/WEB-INF/layouts/templates/contentTab.xml
@@ -7,6 +7,9 @@
 		<param name="securityModel"
 			optional="true"
 		/>
+		<param name="securityId"
+			optional="true"
+		/>
 		<param name="domain"
 			value=""
 		/>
@@ -46,6 +49,7 @@
 		horizontal="false"
 		model="${securityModel}"
 		securityDomain="${domain}"
+		securityId="${securityId}"
 		titleKey="${z_legacy_tabLabel}"
 	>
 		<tabInfo id="${z_legacy_tabId}"
